[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlstudio_sdk"
version = "0.0.1"
authors = [
  { name="PYS", email="xian@hanafn.com" },
]
description = "This is sdk for mlstudio users."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
